Edited files like html and py

--- a/hondablog/21_06.html
+++ b/hondablog/21_06.html
@@ -1,3 +1,4 @@
+<!-- Hello world , это мой автомобильный блог на уникальные машины марки Honda Motor Co. -->
 <!DOCTYPE html>
 <html style=>
 <head>  
